fix dark model light model

--- a/front-end/src/public/css/image.css
+++ b/front-end/src/public/css/image.css
@@ -17,11 +17,15 @@
   transition: background .2s ease-in-out, border .2s ease-in-out;
 }
 
-.drop-container:hover,
+html.dark .drop-container:hover,
 .drop-container.drag-active {
   border-color: #00c6ab;
 }
 
+.drop-container:hover,
+.drop-container.drag-active {
+  border-color: #e4c021;
+}
 
 .drop-title {
   color: white;
@@ -52,7 +56,12 @@ input[type=file]::file-selector-button {
   transition: background .2s ease-in-out;
 }
 
-.drop-container:hover  
+html.dark .drop-container:hover  
 input[type=file]::file-selector-button {
   background: #00c6ab;
+}
+
+.drop-container:hover  
+input[type=file]::file-selector-button {
+  background: #e4c021;
 }
